# liang-renderer

./: CMakeLists.txt  README.md
src/: main.cpp
src/cameras/: camera.cpp  camera.h  film.cpp  film.h  perspective_camera.cpp  perspective_camera.h
src/core/: bla.cpp  geometry.h  liang.h  scene.cpp  scene.h  transform.cpp  transform.h
src/filters/: box_filter.cpp  box_filter.h  filter.cpp  filter.h
src/primitives/: aggregate_primitive.cpp  aggregate_primitive.h  geometric_primitive.cpp  geometric_primitive.h  primitive.h
src/shapes/: mesh.cpp  mesh.h  shape.cpp  shape.h
src/tests/: t_camera.cpp  t_geometry.cpp  t_main.cpp  t_primitive.cpp  t_scene.cpp  t_shape.cpp  t_transform.cpp  test.h  util.cpp  util.h
src/utils/: math.h
